--- a/React+Vite/my-react-app/src/style/FlashSales.css
+++ b/React+Vite/my-react-app/src/style/FlashSales.css
@@ -422,11 +422,13 @@
     box-shadow: 0 8px 32px rgba(0, 0, 0, 0.08);
 }
 
-.fsp-empty-icon {
+/* Removed fire icon */
+/* .fsp-empty-icon {
     font-size: 16rem;
     display: block;
     margin-bottom: 4rem;
-}
+} */
+
 
 .fsp-empty h3 {
     margin: 0 0 2rem;
