--- a/React+Vite/my-react-app/src/components/modals/VoucherPickerModal/VoucherPickerModal.css
+++ b/React+Vite/my-react-app/src/components/modals/VoucherPickerModal/VoucherPickerModal.css
@@ -99,6 +99,10 @@
     color: #666;
 }
 
+.voucher-empty p {
+    font-size: 16px;
+}
+
 .voucher-loading .spinner {
     width: 40px;
     height: 40px;
